# xscreenrec

./: .gitignore  CMakeLists.txt
include/: xscreenrec.h
include/xsr/: format.h  options.h  xscreenrec.h
src/: format.c  main.c  options.c  xscreenrec.c
